18_reverse_str/grade.txt
Grading at Mon Jul 20 21:28:52 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:12: error: comparison between pointer and integer [-Werror]
   if (*str == NULL)
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
